tests/ui/issues/issue-42796.stderr
error[E0382]: borrow of moved value: `s`
  --> $DIR/issue-42796.rs:18:20
   |
LL |     let s = "Hello!".to_owned();
   |         - move occurs because `s` has type `String`, which does not implement the `Copy` trait
LL |     let mut s_copy = s;
   |                      - value moved here
...
LL |     println!("{}", s);
   |                    ^ value borrowed here after move
   |
help: consider cloning the value if the performance cost is acceptable
   |
LL |     let mut s_copy = s.clone();
   |                       ++++++++

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0382`.
